--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,10 @@
 #       enabled: "ON"
 
 en:
-  hello: "Hello world"
+  activerecord:
+    errors:
+      models:
+        system_configuration:
+          attributes:
+            base:
+              must_be_singleton: 'Cannot create multiple records'
