--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,3 +35,7 @@ en:
           attributes:
             base:
               must_be_singleton: 'Cannot create multiple records'
+        transfer:
+          attributes:
+            base:
+              valid_location_type: 'You can only transfer from inventory to store'
