Enhanced UI for the productions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,11 @@
 #       enabled: "ON"
 
 en:
+  time:
+    formats:
+      date: "%d.%m.%Y"
+      datetime: "%d.%m.%Y - %I:%M %p"
+
   activerecord:
     errors:
       models:
